--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seegno-closure-library",
-  "version": "20140725.0.5",
-  "description": "Fork of closure-library that allows installation via npm.",
+  "version": "20150306.0.0",
+  "description": "A mirror of the upstream Google Closure Library but repackaged for npm and without global namespace pollution.",
   "keywords": [
     "javascript",
     "library",
@@ -29,16 +29,48 @@
     "url": "http://github.com/seegno/closure-library.git"
   },
   "contributors": [
-    "Google Inc.",
-    "Mohamed Mansour <hello@mohamedmansour.com>",
-    "Bjorn Tipling <bjorn.tipling@gmail.com>",
-    "SameGoal LLC <help@samegoal.com>",
-    "Guido Tapia <guido.tapia@gmail.com>",
-    "Andrew Mattie <amattie@gmail.com>",
-    "Ilia Mirkin <ibmirkin@gmail.com>",
-    "Ivan Kozik <ivan.kozik@gmail.com>",
-    "Rich Dougherty <rich@rd.gen.nz>",
-    "Chad Killingsworth <chadkillingsworth@missouristate.edu>",
-    "Dan Pupius <dan.pupius@gmail.com>"
+    {
+      "name": "Google Inc."
+    },
+    {
+      "name": "Mohamed Mansour",
+      "email": "hello@mohamedmansour.com"
+    },
+    {
+      "name": "Bjorn Tipling",
+      "email": "bjorn.tipling@gmail.com"
+    },
+    {
+      "name": "SameGoal LLC",
+      "email": "help@samegoal.com"
+    },
+    {
+      "name": "Guido Tapia",
+      "email": "guido.tapia@gmail.com"
+    },
+    {
+      "name": "Andrew Mattie",
+      "email": "amattie@gmail.com"
+    },
+    {
+      "name": "Ilia Mirkin",
+      "email": "ibmirkin@gmail.com"
+    },
+    {
+      "name": "Ivan Kozik",
+      "email": "ivan.kozik@gmail.com"
+    },
+    {
+      "name": "Rich Dougherty",
+      "email": "rich@rd.gen.nz"
+    },
+    {
+      "name": "Chad Killingsworth",
+      "email": "chadkillingsworth@missouristate.edu"
+    },
+    {
+      "name": "Dan Pupius",
+      "email": "dan.pupius@gmail.com"
+    }
   ]
 }
