--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "homepage": "https://github.com/seegno/closure-library",
   "licenses": [
     {
+      "type": "MIT",
+      "url": "https://github.com/seegno/closure-library/raw/master/LICENSE"
+    },
+    {
       "type": "Apache 2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
